# pyspde

./: LICENSE  README.md  build_and_upload.sh  kriging.py  pyproject.toml  requirements.txt  test.py  test_params.py  test_thetas.py
scripts/: krig_messier81.py  simu_anticline.py
src/: __init__.py  anisotropy.py  grid.py  linear_system.py  neighbours.py  spde.py  utils.py
src/pyspde/: __init__.py  anisotropy.py  grid.py  neighbours.py  spde.py  utils.py
