[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspde"
version = "0.0.6"
authors = [
  { name="Esteban Jimenez", email="ejimenez@minerai.com.au" },
]
description = "PySPDE is a Python library for performing simulations and kriging of non-stationary spatial gaussian random fields with Matérn covariance, by solving the following Stochastic Partial Differential Equations (SPDEs)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["scipy", "numpy", "matplotlib", "scikit-sparse==0.4.12"]

[project.urls]
Homepage = "https://github.com/M1nerAI/pyspde"
Issues = "https://github.com/M1nerAI/pyspde/issues"


[tool.ruff.lint]
select = ["ALL"]
#I001 unsorted-imports
#ANN101 missing-type-self
#Q000 Double quotes instead of single quotes
#PLR0913 toomany arguments
#RET505 unnecesary return after else
#N806 non-lowercase-variable-in-function 
extend-ignore = ["I001", "ANN101", "Q000", "PLR0913", "RET505", "N806"]

[tool.ruff]
line-length = 79